  satisfying a monotonic predicate.
  (Gabriel de Perthuis, with contributions from Alain Frisch, review by
  Hezekiah M. Carty and Simon Cruanes, initial report by Gerd Stolpmann)

- Add missing functions to ArrayLabels, BytesLabels, ListLabels,
  MoreLabels, StringLabels so they are compatible with non-labeled
  counterparts.
  (Roma Sokolov)

### Manual and documentation:

- GPR#939: activate the caml_example environment in the language
  extensions section of the manual. Convert some existing code
  examples to this format.
  (Florian Angeletti)

- add a HACKING.adoc file to contain various tips and tricks for
  people hacking on the repository. See also CONTRIBUTING.md for
  advice on sending contributions upstream.
  (Gabriel Scherer and Gabriel Radanne, review by David Allsopp,
  inspired by John Whitington)

### Other libraries:

- MPR#7339, GPR#787: Support the '0 dimension' case for bigarrays
  (see Bigarray documentation)
  (Laurent Mazare,
   review by Gabriel Scherer, Alain Frisch and Hezekiah M. Carty)

* PR#7342, GPR#797: fix Unix.read on pipes with no data left on Windows
  it previously raised an EPIPE error, it now returns 0 like other OSes
  (Jonathan Protzenko)

- PR#7457: a case of double free in the systhreads library (POSIX implementation)
  (Xavier Leroy, report by Chet Murthy)

- GPR#997: Deprecate Bigarray.*.map_file and add Unix.map_file as a
  first step towards moving Bigarray to the stdlib
  (Jeremie Dimino)

### Bytecode debugger (ocamldebug):

- GPR#977: Catch Out_of_range in "list" command
  (Yunxing Dai)

### Tools:

- PR#5163: ocamlobjinfo, dump globals defined by bytecode executables
  (Stéphane Glondu)

- PR#7333: ocamldoc, use the first sentence of text file as
  a short description in overviews.
  (Florian Angeletti)

- GPR#848: ocamldoc, escape link targets in HTML output
  (Etienne Millon, review by Gabriel Scherer, Florian Angeletti and
  Daniel Bünzli)

- GPR#986: ocamldoc, use relative paths in error message