@@ -130,9 +130,13 @@ let float_of_string_opt x =
   with Failure _ -> None
 
 let parse_and_expand_argv_dynamic_aux allow_expand current argv speclist anonfun errmsg =
-  let b = Buffer.create 200 in
   let initpos = !current in
-  let stop error =
+  let convert_error error =
+    (* convert an internal error to a Bad/Help exception
+       *or* add the program name as a prefix and the usage message as a suffix
+       to an user-raised Bad exception.
+    *)
+    let b = Buffer.create 200 in
     let progname = if initpos < (Array.length !argv) then !argv.(initpos) else "(?)" in
     begin match error with
       | Unknown "-help" -> ()
@@ -144,43 +148,43 @@ let parse_and_expand_argv_dynamic_aux allow_expand current argv speclist anonfun
       | Wrong (opt, arg, expected) ->
           bprintf b "%s: wrong argument '%s'; option '%s' expects %s.\n"
                   progname arg opt expected
-      | Message s ->
+      | Message s -> (* user error message *)
           bprintf b "%s: %s.\n" progname s
     end;
     usage_b b !speclist errmsg;
     if error = Unknown "-help" || error = Unknown "--help"
-    then raise (Help (Buffer.contents b))
-    else raise (Bad (Buffer.contents b))
+    then Help (Buffer.contents b)
+    else Bad (Buffer.contents b)
   in
   incr current;
   while !current < (Array.length !argv) do
-    let s = !argv.(!current) in
-    if String.length s >= 1 && s.[0] = '-' then begin
-      let action, follow =
-        try assoc3 s !speclist, None
-        with Not_found ->
+    begin try
+      let s = !argv.(!current) in
+      if String.length s >= 1 && s.[0] = '-' then begin
+        let action, follow =
+          try assoc3 s !speclist, None
+          with Not_found ->
           try
             let keyword, arg = split s in
             assoc3 keyword !speclist, Some arg
-          with Not_found -> stop (Unknown s)
-      in
-      let no_arg () =
-        match follow with
-        | None -> ()
-        | Some arg -> stop (Wrong (s, arg, "no argument")) in
-      let get_arg () =
-        match follow with
-        | None ->
-          if !current + 1 < (Array.length !argv) then !argv.(!current + 1)
-          else stop (Missing s)
-        | Some arg -> arg
-      in
-      let consume_arg () =
-        match follow with
-        | None -> incr current
-        | Some _ -> ()
-      in
-      begin try
+          with Not_found -> raise (Stop (Unknown s))
+        in
+        let no_arg () =
+          match follow with
+          | None -> ()
+          | Some arg -> raise (Stop (Wrong (s, arg, "no argument"))) in
+        let get_arg () =
+          match follow with
+          | None ->
+              if !current + 1 < (Array.length !argv) then !argv.(!current + 1)
+              else raise (Stop (Missing s))
+          | Some arg -> arg
+        in
+        let consume_arg () =
+          match follow with
+          | None -> incr current
+          | Some _ -> ()
+        in
         let rec treat_action = function
         | Unit f -> f ();
         | Bool f ->
@@ -253,15 +257,12 @@ let parse_and_expand_argv_dynamic_aux allow_expand current argv speclist anonfun
             and after = Array.sub !argv (!current + 1) ((Array.length !argv) - !current - 1) in
             argv:= Array.concat [before;newarg;after];
         in
-        treat_action action
-      with Bad m -> stop (Message m);
-         | Stop e -> stop e;
-      end;
-      incr current;
-    end else begin
-      (try anonfun s with Bad m -> stop (Message m));
-      incr current;
+        treat_action action end
+      else anonfun s
+    with | Bad m -> raise (convert_error (Message m));
+         | Stop e -> raise (convert_error e);
     end;
+    incr current
   done
 
 let parse_and_expand_argv_dynamic current argv speclist anonfun errmsg =
